<resources>
    <string name="app_name">BorrowIt</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="calculator">Calculator</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_title">talk to an advisor</string>
    <string name="contact_title_bottom">Click to get Started!</string>
    <string name="contact_content">The result from this calculator should be used as an indication only.
    Results do not represent either quotes or pre-qualification for product.</string>
    <string name="about_title">property finance</string>
    <string name="about_title_bottom">start with smart advice</string>
    <string name="about_content">Smartline has 36 lenders for both Home &amp; Commercial Lending.
        There are a range of factors used by banks to determine the lending policies for which you will qualify,
        such as your savings and employment history.
        The loan calculator is a handy way of establishing an indicative range of your borrowing capacity.
</string>
    <string name="loading">Loading...</string>
    <string name="error_network_check">Please Check data network Connection</string>
</resources>
