<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebg"
    android:orientation="vertical"
    tools:context="com.neostore.borrowit.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:gravity="top">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/smartline_logo" />



        <!--<ImageView-->
            <!--android:id="@+id/imgLoanCal"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:src="@drawable/loan_calc" />-->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:paddingRight="5dp">
        <ImageView
            android:id="@+id/imgReload"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/reload" />

        <TextView
            android:text="Loan Calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"

            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/imgReload"/>
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/framContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/linCalculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgcal"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:src="@drawable/calculator_unselected" />

            <TextView
                android:id="@+id/txtCalculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/calculator"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linAbout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/linCalculator"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgabout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/about_unselected" />

            <TextView
                android:id="@+id/txtAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linContactUs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/linBooks"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgcontact"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/contact_unselected" />

            <TextView
                android:id="@+id/txtConatactUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contact_us"
                android:textColor="#000000" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
